--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,7 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.mysql-connector-java-5.1.28-bin.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
